--- a/ajapaik-ui/pom.xml
+++ b/ajapaik-ui/pom.xml
@@ -17,6 +17,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	
+	<!--
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -31,15 +32,31 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-
+ 	-->
+ 
 	<build>
 		<finalName>ajapaik-ui</finalName>
+	
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>8.1.4.v20120524</version>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<webResources>
+						<resource>
+							<directory>src/main/webapp</directory>
+							<filtering>true</filtering>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>			
 		</plugins>
 	</build>
 </project>
