Removed duplicate attributes like groupId and version.

--- a/ajapaik-service/pom.xml
+++ b/ajapaik-service/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<name>ajapaik-service</name>
+	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>ee.ajapaik</groupId>
@@ -10,43 +10,35 @@
 		<relativePath>../ajapaik-parent</relativePath>
 	</parent>
 
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>ee.ajapaik</groupId>
 	<artifactId>ajapaik-service</artifactId>
-	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<properties>
-		<maven.build.timestamp.format>yyyy.MM.dd HH:mm</maven.build.timestamp.format>
-		<maven.build.timestamp>${maven.build.timestamp}</maven.build.timestamp>
-	</properties>
+	<name>ajapaik-service</name>
+
+	<!-- <properties> <maven.build.timestamp.format>yyyy.MM.dd HH:mm</maven.build.timestamp.format> 
+		<maven.build.timestamp>${maven.build.timestamp}</maven.build.timestamp> </properties> -->
 
 	<dependencies>
-
 		<dependency>
 			<groupId>ee.ajapaik</groupId>
 			<artifactId>ajapaik-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>3.1.1.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>3.1.1.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>3.1.1.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
@@ -66,124 +58,104 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>3.1.0.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>3.1.1.RELEASE</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>		
-		
+		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<version>1.8.6</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
-		</dependency>		
-		
+		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.2</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>4.2</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>com.sleepycat</groupId>
 			<artifactId>je</artifactId>
 			<version>4.0.92</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
 			<version>3.6.2</version>
-		</dependency>	
-
+		</dependency>
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
 		</dependency>
-
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
 			<version>8.1.4.v20120524</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.jetty.orbit</groupId>
 			<artifactId>javax.servlet</artifactId>
 			<version>3.0.0.v201112011016</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlets</artifactId>
 			<version>8.1.4.v20120524</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.googlecode</groupId>
 			<artifactId>jsonrpc4j</artifactId>
 			<version>0.24</version>
 		</dependency>
-	
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<version>2.0.2</version>
 		</dependency>
-	
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.0.2</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.5.2</version>
 			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
-		    <groupId>org.hsqldb</groupId>
-		    <artifactId>hsqldb</artifactId>
-		    <version>2.2.8</version>
-		    <scope>test</scope>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.2.8</version>
+			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-webapp</artifactId>
@@ -213,4 +185,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
