--- a/ajapaik-parent/pom.xml
+++ b/ajapaik-parent/pom.xml
@@ -18,6 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<axis2.version>1.7.0-SNAPSHOT</axis2.version>
 	</properties>
 
 	<repositories>
