--- a/ajapaik-service/src/main/webapp/WEB-INF/web.xml
+++ b/ajapaik-service/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+    <filter-mapping>
+        <filter-name>cross-origin</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 	<filter>
 		<filter-name>gzip</filter-name>
 		<filter-class>org.eclipse.jetty.servlets.GzipFilter</filter-class>
