--- a/ajapaik-service/src/main/webapp/WEB-INF/web.xml
+++ b/ajapaik-service/src/main/webapp/WEB-INF/web.xml
@@ -17,17 +17,17 @@
         </init-param>
         <init-param>
             <param-name>allowedMethods</param-name>
-            <param-value>GET,POST,DELETE,PUT,HEAD</param-value>
+            <param-value>GET,POST,OPTIONS,DELETE,PUT,HEAD</param-value>
         </init-param>
         <init-param>
             <param-name>allowedHeaders</param-name>
-            <param-value>origin, content-type, accept</param-value>
+            <param-value>origin, content-type, accept, authorization</param-value>
         </init-param>
     </filter>
-
+    
     <filter-mapping>
         <filter-name>cross-origin</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>*</url-pattern>
     </filter-mapping>
 
 	<filter>
