--- a/ajapaik-service/src/main/webapp/WEB-INF/web.xml
+++ b/ajapaik-service/src/main/webapp/WEB-INF/web.xml
@@ -8,28 +8,6 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-    <filter>
-        <filter-name>cross-origin</filter-name>
-        <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
-        <init-param>
-            <param-name>allowedOrigins</param-name>
-            <param-value>*</param-value>
-        </init-param>
-        <init-param>
-            <param-name>allowedMethods</param-name>
-            <param-value>GET,POST,OPTIONS,DELETE,PUT,HEAD</param-value>
-        </init-param>
-        <init-param>
-            <param-name>allowedHeaders</param-name>
-            <param-value>origin, content-type, accept, authorization</param-value>
-        </init-param>
-    </filter>
-    
-    <filter-mapping>
-        <filter-name>cross-origin</filter-name>
-        <url-pattern>*</url-pattern>
-    </filter-mapping>
-
 	<filter>
 		<filter-name>gzip</filter-name>
 		<filter-class>org.eclipse.jetty.servlets.GzipFilter</filter-class>
@@ -83,5 +61,14 @@
 	<servlet-mapping>
         <servlet-name>csvServlet</servlet-name>
         <url-pattern>/csv/</url-pattern>
-    </servlet-mapping>    
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>cross-origin</filter-name>
+        <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>cross-origin</filter-name>
+        <url-pattern>/staging.ajapaik.ee/*</url-pattern>
+    </filter-mapping>
 </web-app>
