--- a/ajapaik-service/src/test/webapp/WEB-INF/web.xml
+++ b/ajapaik-service/src/test/webapp/WEB-INF/web.xml
@@ -5,28 +5,6 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
 	<description>Testing servlets</description>
-
-    <filter>
-        <filter-name>cross-origin</filter-name>
-        <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
-        <init-param>
-            <param-name>allowedOrigins</param-name>
-            <param-value>*</param-value>
-        </init-param>
-        <init-param>
-            <param-name>allowedMethods</param-name>
-            <param-value>GET,POST,OPTIONS,DELETE,PUT,HEAD</param-value>
-        </init-param>
-        <init-param>
-            <param-name>allowedHeaders</param-name>
-            <param-value>origin, content-type, accept, authorization</param-value>
-        </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>cross-origin</filter-name>
-        <url-pattern>*</url-pattern>
-    </filter-mapping>
 	
 	<filter>
 		<filter-name>gzip</filter-name>
@@ -37,4 +15,14 @@
 		<filter-name>gzip</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+    <filter>
+        <filter-name>cross-origin</filter-name>
+        <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>cross-origin</filter-name>
+        <url-pattern>/staging.ajapaik.ee/*</url-pattern>
+    </filter-mapping>
 </web-app>
