--- a/ajapaik-parent/pom.xml
+++ b/ajapaik-parent/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<axis2.version>1.7.0-SNAPSHOT</axis2.version>
+		<axis2.version>1.7.3</axis2.version>
 		<jackson.version>2.0.2</jackson.version>
 	</properties>
 
@@ -37,17 +37,6 @@
 				<checksumPolicy>fail</checksumPolicy>
 			</snapshots>
 			<url>http://repository.apache.org/snapshots/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>jsonrpc4j-webdav-maven-repo</id>
-			<name>jsonrpc4j maven repository</name>
-			<snapshots>
-				<enabled>false</enabled>
-				<updatePolicy>never</updatePolicy>
-				<checksumPolicy>fail</checksumPolicy>
-			</snapshots>
-			<url>http://jsonrpc4j.googlecode.com/svn/maven/repo/</url>
 			<layout>default</layout>
 		</repository>
 	</repositories>
@@ -150,6 +139,8 @@
 							<requestHeaderSize>65535</requestHeaderSize>
 						</connector>
 					</connectors>
+					<stopKey/>
+					<stopPort/>
 				</configuration>
 				<dependencies>
 					<dependency>
