--- a/ajapaik-service/pom.xml
+++ b/ajapaik-service/pom.xml
@@ -176,6 +176,11 @@
             <version>1.7.21</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
